workout CRUD complete
