# backend/swagger.json
@@ -5,10 +5,10 @@
     "description": "API documentation for Fitness Progress",
     "version": "1.0.0"
   },
-  "host": "cse-341-fitness-progress-tracker-api-team.onrender.com",
+  "host": "localhost:3000",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/users/": {
@@ -45,16 +45,25 @@
             "schema": {
               "type": "object",
               "properties": {
-                "title": {
+                "userId": {
                   "example": "any"
                 },
-                "duration": {
+                "workoutType": {
+                  "example": "any"
+                },
+                "durationMinutes": {
                   "example": "any"
                 },
                 "date": {
                   "example": "any"
                 },
-                "exercises": {
+                "notes": {
+                  "example": "any"
+                },
+                "caloriesBurned": {
+                  "example": "any"
+                },
+                "intensity": {
                   "example": "any"
                 }
               }
@@ -169,9 +178,9 @@
         }
       }
     },
-    "/goals": {
+    "/goals/": {
       "get": {
-        "description": "Goals route working",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -179,34 +188,28 @@
         }
       },
       "post": {
-        "description": "Create a new goal",
+        "description": "",
         "parameters": [
           {
-            "name": "goal",
+            "name": "body",
             "in": "body",
-            "required": true,
             "schema": {
               "type": "object",
               "properties": {
                 "userId": {
-                  "type": "string",
-                  "example": "12345"
+                  "example": "any"
                 },
                 "goalName": {
-                  "type": "string",
-                  "example": "Run 10 miles"
+                  "example": "any"
                 },
                 "targetAmount": {
-                  "type": "number",
-                  "example": 10
+                  "example": "any"
                 },
                 "deadline": {
-                  "type": "string",
-                  "example": "2026-08-01"
+                  "example": "any"
                 },
                 "status": {
-                  "type": "string",
-                  "example": "In Progress"
+                  "example": "any"
                 }
               }
             }
@@ -214,10 +217,10 @@
         ],
         "responses": {
           "201": {
-            "description": "Goal created successfully"
+            "description": "Created"
           },
           "500": {
-            "description": "Server error"
+            "description": "Internal Server Error"
           }
         }
       }
